# elastic-diffusive-cosmology

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  EDC_EPISTEMIC_STANDARD.tex  EDC_PYTHON_REFACTOR_REPORT.md  README.md  main.tex  references.bib
code/: README.md  SOURCES.md  edc_constants.py  edc_double_slit.py  edc_double_slit2.py  edc_entanglement.py  edc_galaxy_rotation.py  edc_gravity_check.py  edc_lensing.py  edc_mercury_precession_simulator.py  pyproject.toml
code/docs/: PUBLIC_USAGE.md
code/patches/: edc_constants_fix_real_w.patch
code/scripts/: 01_constants_v17.49.txt  02_double_slit_v17.49.txt  04_galaxy_rotation_v17.49.2.txt  05_gravity_v17.49.txt  06_mercury_precession_v17.49.txt  README.md  edc_constants.py  edc_double_slit.py  edc_entanglement.py  edc_galaxy_rotation2.py  edc_gravity_check.py  edc_lensing.py  edc_lensing_refractive_v17.49.023.py  edc_mercury_precession_simulator.py  edc_mercury_precession_simulator_strict_v17.49.020.patch  edc_mercury_precession_simulator_strict_v17.49.020.py  edc_mercury_precession_simulator_strict_v17.49.021.py
code/scripts/archive/17.49/: edc_double_slit.py  edc_double_slit2.py  edc_entanglement.py  edc_fundamental_constants_check.py  edc_lensing.py  (+10 more)
code/scripts/experimentals/: edc_h2_molecule_bond.py  edc_hidrogen_atom_check.py  edc_hidrogen_atom_check_fixed_v17.49.015.py  edc_ultimate_unification_hypotesis.py
code/scripts/results_v17.49/: 02b_double_slit2_v17.49.txt  03_lensing_physical_v17.49.txt  05_gravity_check_v17.49.txt
code/src/edc/: __init__.py  epistemic.py
code/tests/: test_lensing.py
(+883 files in other folders)
