[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edc"
version = "0.1.0"
description = "Elastic Diffusive Cosmology reproducibility utilities (internal)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "scipy", "sympy"]

[tool.setuptools.packages.find]
where = ["src"]
